# ptc-mloda-demo

./: .gitignore  .releaserc.yaml  CLAUDE.md  README.md  demo.py  pyproject.toml
docs/: github-workflows.md
ptc_mloda_demo/compute_frameworks/my_plugin/: __init__.py
ptc_mloda_demo/compute_frameworks/my_plugin/tests/: test_my_compute_framework.py
ptc_mloda_demo/extenders/my_plugin/: __init__.py
ptc_mloda_demo/extenders/my_plugin/tests/: test_my_extender.py
ptc_mloda_demo/extenders/observability/: observability_extender.py
ptc_mloda_demo/extenders/observability/tests/: test_observability_extender.py
ptc_mloda_demo/feature_groups/my_plugin/: __init__.py
ptc_mloda_demo/feature_groups/my_plugin/tests/: test_my_feature_group.py
ptc_mloda_demo/feature_groups/sample_data/: sample_data_features.py
ptc_mloda_demo/feature_groups/sample_data/tests/: test_sample_data.py
tests/: test_mloda_imports.py
