[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptc-mloda-demo"
# Always start at least at 0.2.0 to make semver work.
# Initial release for semver needs also a manually pushed minimum tag (likely 0.2.0).
version = "0.3.2"
description = "PTC mloda demo — showcasing mloda plugin patterns for PTC use cases."
license = "Apache-2.0"
authors = [{ name = "PTC Demo", email = "demo@ptc.com" }]
dependencies = ["mloda>=0.4.6", "mloda-testing>=0.2.8", "anthropic", "pandas"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "tox",
    "tox-uv",
    "pytest",
    "ruff",
    "mypy",
    "bandit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ptc_mloda_demo*"]

[tool.pytest.ini_options]
testpaths = ["ptc_mloda_demo", "tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "demo"
ignore_errors = true

[tool.bandit]
exclude_dirs = [".tox", ".venv", "tests"]
skips = ["B404", "B603", "B607"]
